<resources>
    <string name="app_name">ColorSelectorDialog</string>

    <string name="hsv_dialog_title">Color selector</string>
    <string name="main_confirm">Confirm</string>
    <string name="main_cancel">Cancel</string>
    <string name="pref_message_counter_reset">Reset</string>
    <string name="hue_advanced_title">Advanced settings</string>
    <string name="hue_h_title">Hue:</string>
    <string name="hue_s_title">Saturation:</string>
    <string name="hue_v_title">Brightness:</string>

</resources>
